2005-02-12  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c (task_tree_init): Disable search.

	* libplanner/mrp-task-manager.c (task_manager_do_backward_pass):
	Patch from Jani Tiainen to fix bug #140536. Go through children of
	the successor instead of the successor if there are any.

2005-01-30 Alvaro del Castillo  <acs@barrapunto.com>

	* configure.in: support for evolution plugin library.
	* eds-backend/planner-source: Evolution plugin in order to add easily
	Planner files as Task Sources to Evolution.
	* eds-backend/e-cal-backend-planner.c:
	fix some bugs in the backend that make it crash and add some
	test code in order to be more robust.

2005-01-30 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-eds-plugin.c: love care
	- If getting contacts fails, activate the import resource 
	dialog control, clean the old resources in the list  and 
	deactivate the search control.
	- Import resource name with E_CONTACT_FULL_NAME.
	
2005-01-30  Richard Hult  <richard@imendio.com>

	* gtk-doc.make: Updated by gtk-doc.

	* libplanner/mrp-calendar.c: (imrp_calendar_replace_day):
	* libplanner/mrp-old-xml.c: (old_xml_read_overridden_day):
	* src/planner-calendar-dialog.c: (cal_cmd_day_type_do),
	(cal_cmd_day_type_undo), (cal_dialog_apply_clicked_cb): Fix 64-bit
	platform crash.
	
2004-11-25  Christoffer Olsen  <co@deworks.net>

	* configure.in: Added data/planner.desktop.in to AC_OUTPUT
	* data/planner.desktop.in: Moved to data/planner.desktop.in.in
	* data/planner.desktop.in.in: Added Bugzilla headers
	* po/POTFILES.in: References data/planner.desktop.in.in instead

	- Added Bug Buddy support, filing Planner bugs should be
	automagical now.

2004-11-09  Alvaro del Castillo  <acs@barrapunto.com>

	* docs/sql/README.sql: use template1 as connection database.

	* src/planner-sql-plugin.c: don't create planner group because
	normal postgres user can't create a GROUP.

	* data/sql/database-0.13.sql: don't use planner GROUP.
